tests/sksl/errors/DuplicateSymbol.glsl
### Compilation failed:

error: 2: symbol 'x' was already defined
error: 5: symbol 'func' was already defined
error: 6: symbol 'y' was already defined
3 errors
